# chaos

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEOWNERS  Dockerfile  LICENSE  README.md  docker-compose.local.yml  docker-compose.yml  onboarding.md  package-lock.json  renovate.json
backend/backend-deploy-utils/deploy-seeder/: Cargo.toml
backend/backend-deploy-utils/deploy-seeder/.sqlx/: query-163970f6f447b4341920dca8a27a55b880c5715fe271b308cb8f5ac21b9c3bae.json  (+1 more)
backend/database-seeding/: Cargo.toml
backend/database-seeding/src/: main.rs  seeder.rs
backend/server/: Cargo.toml  cookies.txt
backend/server/.cargo/: config.toml
backend/server/.sqlx/: query-0017980ccaa0a274a4669402a2e6d4da4237b48a2f13eea1010c20262e80798e.json  query-060101cd7031778d1467a12c22b8dd0f6c3fa7f514d2c37fdfcb0d9275774f20.json  query-071a8414c0f58082b285f6a202496648bd28498e28bf5c21f206a290abc8788e.json  query-08d717b7f462c78e7bf4a6e00fe0c39296c94827ec96559802cdb0dd094f07b3.json  query-093eff27eedaacceeb6c6fc9d09b257825655ea0184d5aa7923dc9966aac50f8.json  query-09f4962bdba2a1a22f7c419ad9e333dc627bf878abf3a0aa8187286f5c524fae.json  query-09ff7225f0c928b68060743fdb2206c375198af8e6c7e0b44b91485804712d03.json  query-0d49273467b6664fe1dcee54a4e2812de314211a35f089cbacd1660529d75e4b.json  query-0da95950d91ee8ea01bc37b40aa84a2f196bb268e9799d228372de13742fc342.json  query-1479e240578ecb26bd078e117514318e37bbfaff1a1313b7416cf55842a19e84.json  query-14b26a681fe01d0f92b77af75cd1de6b47e8408c68d901575af26fae066f7f87.json  query-15fd984b889101d602e77cf2be1ef892e724994871ec9fe26e8ee45fdf580b20.json  query-17439a6c4b50339442c66b71811f28bb72529b8236528ceaddba6a3e829f89eb.json  query-1a8751bc16115997ed2102944f8a9be1162b84eae2c488bbef988f996f8ed89b.json  query-1b8dc2659ab09e18bd16ac9094e113100feec0111210180050973d80d3686a0e.json  query-1c153cc60a3cc5e2edae10ffd780cbc87905635aecf459151cf7528afc9d21c0.json  query-1cbe33e82039bde8e1de43955a7f6ff103a41bf95b25621682c45ab3c52e21fc.json  query-1d2d6add14eb8b8036d098e21fd4866ff0c3057086d6265eeaf5ebca7ec261bf.json  query-1e0cd75a8fbcbdca172a8ae1c15daecd25246b2b7c25165f6a89f3936ebc329f.json  query-2007b351d66ee919fad9e17e29cbc597154c0b6d3bc0775c55320e970837d5b2.json  query-2a1fbdf9fac90bd5f077b5136c12152aa1aa8f8b468e1cc6201fafb3d15c30ee.json  query-2cb4a8064669e21cf72971b80c7a24f89f88e2f2de0e960e94f9bff98395c654.json  query-2ce33be907b788addc910679a043183ed5f986b9a1a6ec1f441a49926420a84f.json  query-3156762e2b437149b4866f87817715d8bd9ef9f8b85efe737f60b25b78451c6a.json  query-32f0b786ca4d4d6edc716427cf523c5be1f36dbe69af0c920dc7c7a52f1170ea.json  query-363343db326b7d3cd54eb8b0ee24e68d0e21ff56ae4c76eb236c257655f15491.json  query-37c7aa27e238ce8f435ce3f38f9aacb1f7e71ec5730ae88e939565352cba86e1.json  query-38303c41577c94600c8d06065181de9a92e3741955a67edecf059633ed0f6023.json  query-386656570b08d639e9296533083d16fc3c4eddf7c70182df293735f61b172d17.json  query-3b32a45f9236a8223b80c50620407e511a98c579ab180db5d5a21ab68040c4e4.json  query-3e02ee3953fecc428f5cda707b0ff20f209191dd8d8ab881e5c8be5e3814600c.json  query-408a5e04ddb66863a6ed41d0c788114345fe121fe90560ef1aca5402503b770f.json  query-49b0f8acf46c475b7ec12365a9cb729850f447aaf598f5bef4a62d2c011334c9.json  query-4fa021e8ac3784dab4a85292d9cf57d1cffd9af680e8b04040ba9b964d01b75a.json  query-50ef00dfdc89ce4c444be99e91580eeddbdd1f2f0c5b7da95141a107859a5a41.json  query-576a607ab1cc0946fb91ea00154eba6bd3c2734b346f42f9847a9bdbf7cd5923.json  query-5794606a9fb1a777ae5364c5b428b4a82497b1f2a8dcaf7f5017a20f4d60e759.json  query-58358a9b83e81920d197ceaa3a64ae9ce498bc7002ef4ae71cae24bf6e4b37c3.json  query-5889c86546a51a5ba38b452c3d4802ad834d6e40259847f4f999b9a3186a6dba.json  query-5eef1179b956650c6bdf901b06fe73328b635bec3da9f722f3786ffa725daa34.json  (+65 more)
backend/server/src/: admin.rs  application.rs  auth.rs  bin.rs  campaigns.rs  comment.rs  constants.rs  email.rs  error.rs  images.rs  lib.rs  main.rs  new_org.rs  organisation.rs  permissions.rs  question.rs  question_types.rs  rocket.rs  role.rs  seeder.rs  static_resources.rs  test_support.rs  user.rs
backend/server/tests/: integration_tests.rs
(+899 files in other folders)
