[package]
name = "database-seeding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = { path = "../server" }
tokio = { version = "1.34"}
chrono = { version = "0.4", features = ["serde"] }


dotenvy = "0.15"