[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Primary crates
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.6.20", features = ["macros", "headers"] }
axum-extra = "0.8.0"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }

# Important secondary crates
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
reqwest = { version = "0.11.20", features = ["json"] }
serde_json = "1.0.105"
chrono = { version = "0.4.26", features = ["serde"] }
oauth2 = "4.4.1"
log = "0.4.20"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
rs-snowflake = "0.6.0"
jsonwebtoken = "9.1.0"
dotenvy = "0.15.7"
