[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Primary crates
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["typed-header", "cookie"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
http = "1.0"

# Important secondary crates
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
oauth2 = "4.4"
log = "0.4"
uuid = { version = "1.5", features = ["serde", "v4"] }
rust-s3 = "0.34.0"
rs-snowflake = "0.6"
jsonwebtoken = "9.1"
dotenvy = "0.15"
handlebars = "6.2"
time = "0.3.37"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
rand = "0.8.5"
rustls = "0.21"
rustls-pemfile = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-rustls = "0.25"
futures-util = "0.3"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
