[package]
name = "deploy-seeder"
version = "0.1.0"
edition = "2024"

[dependencies]
server = { path = "../../server" }
tokio = { version = "1.34"}
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
dotenvy = "0.15"